--- a/Trabalho-modulo-html/index.html
+++ b/Trabalho-modulo-html/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- Define a codificação de caracteres e configurações de exibição para dispositivos móveis -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- Título que aparece na aba do navegador -->
     <title>Portfólio - Fábio Luiz</title>
+    
+    <!-- Link para o arquivo de estilos externos -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Link para os ícones do Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
+    <!-- Estilo CSS embutido para seções com conteúdo -->
     <style>
       section.content-section {
-        display: none;
+        display: none; /* Esconde as seções por padrão */
         max-width: 700px;
         margin: 40px auto;
         padding: 20px;
@@ -21,7 +30,7 @@
       }
 
       section.content-section.active {
-        display: block;
+        display: block; /* Mostra a seção ativa */
       }
 
       section.content-section h2 {
@@ -39,6 +48,7 @@
   </head>
 
   <body>
+    <!-- Cabeçalho com imagem e apresentação -->
     <header>
       <div class="header-content">
         <img src="/imagens/foto.jpeg" alt="Foto de Fábio" />
@@ -52,49 +62,37 @@
       </div>
     </header>
 
+    <!-- Seção de contato com links para redes sociais -->
     <section class="contact">
       <p>
         Se quiser trocar ideias, colaborar ou contratar, entre em contato pelos
         links abaixo.
       </p>
       <div class="links">
-        <a
-          href="https://www.linkedin.com/in/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <!-- Cada link leva para uma rede social -->
+        <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a
-          href="https://github.com/pentestestrategico"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <a href="https://github.com/pentestestrategico" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-github"></i> GitHub
         </a>
         <a href="mailto:fabioluizrl2@gmail.com">
           <i class="fas fa-envelope"></i> Email
         </a>
-        <a
-          href="https://instagram.com/binhorodriguesl"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <a href="https://instagram.com/binhorodriguesl" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-instagram"></i> Instagram
         </a>
-        <a
-          href="https://www.youtube.com/@PentestEstrategico"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <a href="https://www.youtube.com/@PentestEstrategico" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-youtube"></i> YouTube
         </a>
       </div>
     </section>
 
+    <!-- Menu com opções que mostram seções diferentes -->
     <section class="about">
       <p>Mas se quiser conhecer um pouco sobre mim, acesse uma das opções:</p>
       <div class="options">
+        <!-- Cada link ativa uma seção diferente com JavaScript -->
         <a data-target="experiencia">Experiência</a>
         <a data-target="conhecimento">Conhecimento</a>
         <a data-target="formacao">Formação</a>
@@ -102,112 +100,90 @@
       </div>
     </section>
 
+    <!-- Seção de experiência profissional -->
     <section id="experiencia" class="content-section">
       <h2>Experiência</h2>
       <ul>
         <li>
-          Atualmente trabalho com segurança pública pela Polícia Militar do Rio
-          de Janeiro- desde 09/2011
+          Trabalha na Polícia Militar do RJ desde 2011
           <ul>
             <li>Analista de Inteligência</li>
-            <ul><li>Cursos na corporação</li>
-                <ul><li>Aplicações Táticas - COE</li>
-                    <li>APH Tático</li>
-                    <li>MDPM- Método de Defesa Pessoal Militar</li>
-            <li>Cursando Analise e Desenvolvimento de Sistemas - <br>Desenvolvedor FullStack pela DSI</li></ul>
+            <ul>
+              <li>Cursos: Aplicações Táticas - COE, APH Tático, MDPM</li>
+              <li>Cursando ADS e FullStack</li>
+            </ul>
           </ul>
         </li>
         <li>
-          Bug bounty pelas empresas:
+          Atua em programas de Bug Bounty:
           <div class="bugbounty-links">
-          <ul>
-            <li>
-              <a
-                href="https://www.bughunt.com.br/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >BugHunt</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.hackerone.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >HackerOne</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.bugcrowd.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Bugcrowd</a
-              >
-            </li>
-          </ul>
+            <ul>
+              <li><a href="https://www.bughunt.com.br/" target="_blank">BugHunt</a></li>
+              <li><a href="https://www.hackerone.com/" target="_blank">HackerOne</a></li>
+              <li><a href="https://www.bugcrowd.com/" target="_blank">Bugcrowd</a></li>
+            </ul>
+          </div>
         </li>
-      </ul></div>
+      </ul>
     </section>
 
+    <!-- Seção de conhecimentos técnicos -->
     <section id="conhecimento" class="content-section">
       <h2>Conhecimento</h2>
       <ul>
-        <li>
-          Conhecimento em Kali Linux utilizando ferramentas de análise de
-          vulnerabilidades
-        </li>
-        <li>
-          Especialista em ferramentas de Pentest, como Burp Suite, para exploração
-          de Business Logic Vulnerabilities
-        </li>
-        <li>Especialista em Engenharia Social e Phishing</li>
-        <li>Conhecimentos em Pentest em redes Wi-Fi</li>
+        <li>Kali Linux e análise de vulnerabilidades</li>
+        <li>Pentest com Burp Suite e lógica de negócio</li>
+        <li>Engenharia Social e Phishing</li>
+        <li>Pentest em redes Wi-Fi</li>
         <li>OSINT em fontes abertas e fechadas</li>
       </ul>
     </section>
 
+    <!-- Seção de formação acadêmica -->
     <section id="formacao" class="content-section">
       <h2>Formação</h2>
       <ul>
-        <li>Graduado em Direito pela Universidade de Nova Iguaçu - UNIG</li>
-        <li>
-          Pós-graduado em Penal e Processo Penal pela Universidade Estácio de Sá
-        </li>
-        <li>Cursando FullStack pelo Senai e DSI</li>
-        <li>Tecnologia de Redes Windows e Linux-Senai</li>
+        <li>Direito pela UNIG</li>
+        <li>Pós-graduação em Penal e Processo Penal</li>
+        <li>Cursando FullStack pelo Senai/DSI</li>
+        <li>Tecnologia de Redes - Windows e Linux (Senai)</li>
       </ul>
     </section>
-       <section id="Hobby" class="content-section">
-      <h2>Hobby</h2>
-    <ul>
-  <li><i class="fas fa-fist-raised" style="color: #f44336; transition: transform 0.2s;"></i> Lutador de Taekwondo - faixa Vermelha ponta preta (atual)</li>
-  <li><i class="fas fa-user-ninja" style="color: #ff9800;"></i> Lutador de Judô - faixa laranja</li>
-  <li><i class="fas fa-shield-alt" style="color: #4caf50;"></i> Lutador de Kombato - faixa verde</li>
-  <li><i class="fas fa-drum" style="color: #ffeb3b;"></i> Lutador de capoeira - cordel verde e amarelo</li>
-  <li><i class="fas fa-running" style="color: #2196f3;"></i> Corredor amador max 21km</li>
-  <li><i class="fas fa-smile-beam" style="color: #9c27b0;"></i> Mas o que eu realmente gosto é curtir minha família</li>
-  <li><i class="fas fa-heart" style="color: red;"></i> Apaixonado pelo meu filho e minha amada esposa</li>
-</ul>
 
+    <!-- Seção de hobbies pessoais -->
+    <section id="Hobby" class="content-section">
+      <h2>Hobby</h2>
+      <ul>
+        <!-- Ícones com cores diferentes representam cada atividade -->
+        <li><i class="fas fa-fist-raised" style="color: #f44336;"></i> Taekwondo - faixa Vermelha ponta preta</li>
+        <li><i class="fas fa-user-ninja" style="color: #ff9800;"></i> Judô - faixa laranja</li>
+        <li><i class="fas fa-shield-alt" style="color: #4caf50;"></i> Kombato - faixa verde</li>
+        <li><i class="fas fa-drum" style="color: #ffeb3b;"></i> Capoeira - cordel verde e amarelo</li>
+        <li><i class="fas fa-running" style="color: #2196f3;"></i> Corredor amador (até 21km)</li>
+        <li><i class="fas fa-smile-beam" style="color: #9c27b0;"></i> Gosta de curtir a família</li>
+        <li><i class="fas fa-heart" style="color: red;"></i> Apaixonado pela esposa e filho</li>
+      </ul>
     </section>
 
+    <!-- Rodapé do site -->
     <footer>© 2025 Fábio Luiz. Todos os direitos reservados.</footer>
 
+    <!-- Script para alternar entre as seções com base na opção clicada -->
     <script>
       const links = document.querySelectorAll(".options a");
       const sections = document.querySelectorAll("section.content-section");
 
       links.forEach((link) => {
         link.addEventListener("click", () => {
-          const target = link.getAttribute("data-target");
+          const target = link.getAttribute("data-target"); // Pega o nome da seção alvo
 
+          // Mostra apenas a seção clicada e esconde as outras
           sections.forEach((section) => {
             if (section.id === target) {
-              section.classList.add("active");
-              section.scrollIntoView({ behavior: "smooth" });
+              section.classList.add("active"); // Adiciona classe que mostra a seção
+              section.scrollIntoView({ behavior: "smooth" }); // Faz scroll suave até a seção
             } else {
-              section.classList.remove("active");
+              section.classList.remove("active"); // Esconde seções não ativas
             }
           });
         });
